# grootkeeper

./: .env  .gitignore  README.md
backend/: __init__.py  app.py  config.py  groot_client.py  groot_policy_client.py  groot_smoke_test.py  isaac_scene_client.py  mock_diagnostic.py  requirements.txt  ros2_client.py  safety.py  schemas.py  system_checks.py  task_orchestrator.py
configs/: env.example  robot.yaml  ros2_topics.yaml  safety.yaml  task.yaml
docs/: architecture.md  checkpoints.md  demo_script.md  failure_debugging.md  l3_architecture.md  l3_checkpoints.md  what_to_say_to_judges.md
frontend/: dashboard.html
isaac/: README.md  action_graph_notes.md  create_trashbot_scene.py  g1_integration_notes.md  g1_joint_replay_executor.py  isaac_ros2_bridge_notes.md  scene_spec.md
ros2_ws/: README.md
ros2_ws/src/trashbot_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/trashbot_bridge/resource/: trashbot_bridge
ros2_ws/src/trashbot_bridge/trashbot_bridge/: __init__.py  groot_action_publisher.py  isaac_execution_listener.py  scene_state_listener.py
scripts/: 00_ssh_to_gb10.sh  01_check_gb10_gpu.sh  02_setup_python_env.sh  03_clone_or_check_groot.sh  04_groot_smoke_test.sh  05_check_ros2.sh  06_check_isaac_sim.sh  06a_run_isaac_sim.sh  07_build_ros2_ws.sh  08_run_backend_groot.sh  08a_run_groot_policy_server.sh  09_test_backend_status.sh  10_test_groot_plan.sh  10_test_groot_smoke.sh  11_run_ros2_bridge_nodes.sh  12_run_dashboard_note.sh  checkpoint_all_l3.sh
