<?xml version="1.0"?>
<package format="3">
  <name>trashbot_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge nodes for Grootkeeper Isaac Sim integration.</description>
  <maintainer email="you@example.com">Grootkeeper</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
